--- a/sass/app.scss
+++ b/sass/app.scss
@@ -22,7 +22,35 @@ html body {
   min-height: 100%;
   padding: 0;
   margin: 0;
+  width: 100%; 
+  overflow:hidden;
 
+}
+
+
+.title-text {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.title {
+  font-family: $header-font;
+  font-size: 40px;
+  @media (min-width: $tablet-width){
+    font-size: 5vw;
+  }
+}
+
+.buttonsAndCounter {
+  flex: 0 0 8rem;
+  @media (min-width: $tablet-width) {
+    order: 1;
+    min-width: 20vw;
+    margin-left: 40px;
+  }
+  order: 2;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .main {
@@ -31,48 +59,43 @@ html body {
     align-items: stretch;
     justify-content: flex-start;
     flex-direction: row;
+    margin-top: 40px;
   }
   margin-bottom: 100px;
 }
 
-.title-text {
-  text-align: center;
-  margin-top: 40px;
-}
-
-.buttonsAndCounter {
-  flex: 0 0 8rem;
-  @media (min-width: $tablet-width) {
-    order: 1;
-    min-width: 20%;
-    max-width: 20%;
-  }
-  order: 2;
-  text-align: center;
-}
-
 .game {
-  text-align: center;
-  margin: 40px auto;
-  position: relative;
+
   flex: 1 1 auto;
   @media (min-width: $tablet-width) {
     order: 2;
-    min-width: 60%;
+   width: 60vw;
   }
+  
 }
+.deck {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 5%;
+  position: relative;
+  perspective: 800px;
+  margin: 0 auto;
+  width: 90%;
+  height: 60vh;
+} 
 
 .instructions {
   @media (min-width: $tablet-width) {
     flex: 0 0 auto;
     order: 3;
-    min-width: 20%;
-    max-width: 20%;
-    margin: 0 auto;
+    width: 20vw;
+    margin-right: 40px;
   }
   order: 1;
   text-align: center;
-  margin-right: 20px;
+  margin: 0 10px;
+  
+  
 }
 
 .instructions-title {
@@ -83,22 +106,17 @@ html body {
   list-style-type: none;
   line-height: 1.5;
   font-size: $text-block-size;
+  padding: 0;
 }
 
 .list-item {
   margin-bottom: 15px;
 }
 
-.title {
-  font-family: $header-font;
-  font-size: 48px;
-}
-
 
 .counter-text {
   font-size: $small-header;
   position: relative;
-  margin: 0 auto;
 }
 
 #counter {
@@ -108,23 +126,6 @@ html body {
 }
 
 .counter-wrapper {}
-
-.deck {
-  @media (min-width: $tablet-width) {
-    height: 450px;
-    width: auto;
-  }
-  height: 400px;
-  width: 80%;
-  @include display(flex);
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  perspective: 800px;
-  margin: 0 20px;
-}
 
 .color-1 {
   background-color: $blue;
@@ -151,21 +152,15 @@ html body {
 }
 
 .plainFront {
-  background-image: url("../assets/images/trumpet.png");
+  background-image: url("../assets/images/note.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 80%;
+  background-size: 50%;
   background-color: white;
 }
 
 .card {
-  @media (min-width: $tablet-width) {
-    height: 28%;
-    width: 20%;
-  }
-  height: 20%;
-  width: 28%;
-  margin: 2%;
+  
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: transform 0.6s;
