--- a/css/app.css
+++ b/css/app.css
@@ -173,10 +173,6 @@ html body {
   background-color: #ff9d1e; }
 
 .plainFront {
-  background-image: url("../assets/images/note.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 40%;
   background-color: white; }
 
 .card {
@@ -225,15 +221,15 @@ figure {
 
 .easy-btn, .hard-btn, .reset-btn {
   width: 80px;
-  height: 30px;
+  height: 40px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   box-shadow: -8px 5px #000;
-  position: relative;
-  top: 0;
+  padding: 0px;
   margin: 6px;
-  font-family: "Bungee Shade", cursive;
-  font-size: 16px;
+  font-family: "Gaegu", cursive;
+  text-align: center;
+  font-size: 20px;
   border: 2px solid black;
   transition: all 0.2s ease-in-out; }
   @media (min-width: 768px) {
@@ -241,8 +237,7 @@ figure {
       display: block;
       margin: 20px auto;
       width: 100px;
-      height: 40px;
-      font-size: 20px; } }
+      height: 40px; } }
 
 .easy-btn {
   background-color: #fcfc28; }
