--- a/sass/app.scss
+++ b/sass/app.scss
@@ -152,10 +152,7 @@ html body {
 }
 
 .plainFront {
-  background-image: url("../assets/images/note.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 40%;
+  
   background-color: white;
 }
 
@@ -204,14 +201,14 @@ figure {
 
 %btn {
   width: 80px;
-  height: 30px;
+  height: 40px;
   @include border-radius(10px);
   box-shadow: -8px 5px #000;
-  position: relative;
-  top: 0;
+  padding: 0px;
   margin: 6px;
-  font-family: $header-font;
-  font-size: 16px;
+  font-family: $main-font;
+  text-align: center;
+  font-size: 20px;
   border: 2px solid black;
   transition: all 0.2s ease-in-out;
   @media (min-width: $tablet-width) {
@@ -219,7 +216,7 @@ figure {
     margin: 20px auto;
     width: 100px;
     height: 40px;
-    font-size: 20px;
+    
   }
 }
 
