--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,6 +16,8 @@ $text-block-size: 18px;
 
 //animation
 $use-tada: true;
+$use-bounceInLeft: true;
+$use-bounceOutLeft: true;
 
 //media queries
 $tablet-width: 768px;
