--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,7 @@ Copyright (c) 2015 Daniel Eden
 body {
   -webkit-backface-visibility: hidden; }
 
+/* Animate.scss code*/
 .animated {
   -webkit-animation-duration: calc( 1s );
   animation-duration: calc( 1s );
@@ -97,6 +98,8 @@ body {
 .bounceOutLeft {
   -webkit-animation-name: bounceOutLeft;
   animation-name: bounceOutLeft; }
+  
+  /* Animate.scss code END */
 
 html body {
   min-height: 100%;
@@ -114,7 +117,6 @@ html body {
   text-align: center;
   font-family: "Gaegu", cursive;
   background-color: #08c6f3;
-  overflow: visible;
   min-height: 100%;
   padding: 0;
   margin: 0;
@@ -134,11 +136,19 @@ html body {
 
 .buttonsAndCounter {
   flex: 0 0 8rem;
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
   order: 2;
   text-align: center;
   margin-bottom: 40px; }
   @media (min-width: 768px) {
     .buttonsAndCounter {
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -ms-flex-order: 1;
+      -webkit-order: 1;
       order: 1;
       min-width: 20vw;
       margin-left: 40px; } }
@@ -147,6 +157,9 @@ html body {
   margin-bottom: 100px; }
   @media (min-width: 768px) {
     .main {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
       display: flex;
       align-items: stretch;
       justify-content: flex-start;
@@ -157,6 +170,10 @@ html body {
   flex: 1 1 auto; }
   @media (min-width: 768px) {
     .game {
+      -webkit-box-ordinal-group: 2;
+      -moz-box-ordinal-group: 2;
+      -ms-flex-order: 2;
+      -webkit-order: 2;
       order: 2;
       width: 60vw; } }
 
@@ -169,14 +186,25 @@ html body {
   margin: 0 auto;
   width: 90%;
   height: 60vh; }
+  @media (min-width: 1024px) {
+    .deck {
+      height: 70vh; } }
 
 .instructions {
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
   order: 1;
   text-align: center;
   margin: 0 10px; }
   @media (min-width: 768px) {
     .instructions {
       flex: 0 0 auto;
+      -webkit-box-ordinal-group: 3;
+      -moz-box-ordinal-group: 3;
+      -ms-flex-order: 3;
+      -webkit-order: 3;
       order: 3;
       width: 20vw;
       margin-right: 40px; } }
